[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Player_3D_FP_script.gd" type="Script" id=1]
[ext_resource path="res://Scripts/baseweapon.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Weapon resourses/Revolver.tres" type="Resource" id=3]
[ext_resource path="res://Scenes/weapons/Riffle.tscn" type="PackedScene" id=4]
[ext_resource path="res://OBJ/Revolver.obj" type="ArrayMesh" id=5]
[ext_resource path="res://materials/def_material.tres" type="Material" id=6]
[ext_resource path="res://materials/outline.tres" type="Material" id=7]
[ext_resource path="res://Audio/Sounds/footsteps.ogg" type="AudioStream" id=8]
[ext_resource path="res://Audio/Sounds/Revolver_shot.ogg" type="AudioStream" id=9]
[ext_resource path="res://Audio/Sounds/fffuuuf.mp3" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Sniperka.tscn" type="PackedScene" id=11]
[ext_resource path="res://Audio/Sounds/get_ammo.mp3" type="AudioStream" id=12]

[sub_resource type="CapsuleShape" id=1]
radius = 0.283526
height = 1.2

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("mesh_handler:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.115, -0.093, -0.198 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mesh_handler:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("mesh_handler:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.466516, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.115, -0.093, -0.198 ), Vector3( 0.115, 0.074, -0.073 ), Vector3( 0.115, -0.093, -0.198 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mesh_handler:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.466516, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 26.556, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.470557, -0.710323, -0.406755, 0.941113, 1.67929, 1.74239 ),
"array_data": PoolByteArray( 98, 242, 69, 190, 127, 145, 3, 63, 140, 197, 132, 190, 0, 127, 129, 64, 0, 59, 0, 56, 56, 16, 70, 62, 29, 135, 3, 63, 55, 205, 132, 190, 0, 127, 129, 64, 0, 57, 0, 56, 100, 108, 137, 190, 149, 168, 0, 63, 194, 20, 135, 62, 0, 127, 129, 64, 0, 59, 0, 52, 224, 170, 137, 62, 19, 144, 0, 63, 158, 235, 134, 62, 0, 127, 129, 64, 0, 57, 0, 52, 224, 170, 137, 62, 19, 144, 0, 63, 158, 235, 134, 62, 0, 232, 5, 110, 0, 57, 0, 52, 119, 145, 68, 62, 189, 215, 53, 191, 92, 162, 11, 189, 0, 232, 253, 112, 0, 54, 0, 52, 100, 108, 137, 190, 149, 168, 0, 63, 194, 20, 135, 62, 0, 232, 4, 111, 0, 57, 0, 0, 147, 232, 68, 190, 228, 160, 53, 191, 196, 48, 9, 189, 0, 232, 251, 110, 0, 54, 0, 0, 100, 108, 137, 190, 149, 168, 0, 63, 194, 20, 135, 62, 133, 236, 251, 110, 0, 57, 0, 60, 147, 232, 68, 190, 228, 160, 53, 191, 196, 48, 9, 189, 133, 236, 251, 116, 0, 54, 0, 60, 98, 242, 69, 190, 127, 145, 3, 63, 140, 197, 132, 190, 133, 236, 251, 111, 0, 57, 0, 58, 119, 14, 7, 190, 36, 186, 52, 191, 44, 66, 208, 190, 133, 236, 252, 116, 0, 54, 0, 58, 142, 114, 6, 62, 113, 232, 52, 191, 180, 59, 208, 190, 0, 129, 127, 64, 0, 54, 0, 56, 119, 14, 7, 190, 36, 186, 52, 191, 44, 66, 208, 190, 0, 129, 127, 64, 0, 48, 0, 56, 119, 145, 68, 62, 189, 215, 53, 191, 92, 162, 11, 189, 0, 129, 127, 64, 0, 54, 0, 52, 147, 232, 68, 190, 228, 160, 53, 191, 196, 48, 9, 189, 0, 129, 127, 64, 0, 48, 0, 52, 56, 16, 70, 62, 29, 135, 3, 63, 55, 205, 132, 190, 123, 236, 4, 116, 0, 57, 0, 56, 142, 114, 6, 62, 113, 232, 52, 191, 180, 59, 208, 190, 123, 236, 6, 113, 0, 54, 0, 56, 224, 170, 137, 62, 19, 144, 0, 63, 158, 235, 134, 62, 123, 236, 5, 116, 0, 57, 0, 52, 119, 145, 68, 62, 189, 215, 53, 191, 92, 162, 11, 189, 123, 236, 5, 110, 0, 54, 0, 52, 98, 242, 69, 190, 127, 145, 3, 63, 140, 197, 132, 190, 143, 126, 252, 116, 0, 57, 0, 58, 119, 14, 7, 190, 36, 186, 52, 191, 44, 66, 208, 190, 143, 126, 3, 118, 0, 54, 0, 58, 56, 16, 70, 62, 29, 135, 3, 63, 55, 205, 132, 190, 143, 126, 252, 117, 0, 57, 0, 56, 142, 114, 6, 62, 113, 232, 52, 191, 180, 59, 208, 190, 143, 126, 4, 116, 0, 54, 0, 56, 56, 241, 173, 190, 247, 54, 38, 62, 198, 161, 137, 63, 129, 0, 127, 64, 0, 57, 0, 60, 242, 2, 174, 190, 219, 117, 87, 63, 59, 161, 137, 63, 129, 0, 127, 64, 0, 57, 0, 58, 218, 176, 170, 190, 178, 183, 44, 62, 52, 246, 170, 63, 129, 0, 127, 64, 0, 57, 0, 60, 218, 176, 170, 190, 182, 222, 85, 63, 52, 246, 170, 63, 129, 0, 127, 64, 0, 57, 0, 58, 130, 189, 173, 62, 99, 158, 38, 62, 241, 22, 137, 63, 13, 130, 12, 57, 0, 57, 0, 52, 210, 240, 137, 62, 127, 55, 110, 62, 46, 38, 4, 63, 13, 130, 0, 56, 118, 56, 0, 52, 56, 241, 173, 190, 247, 54, 38, 62, 198, 161, 137, 63, 13, 130, 1, 56, 0, 57, 0, 0, 210, 240, 137, 190, 127, 55, 110, 62, 46, 38, 4, 63, 13, 130, 244, 57, 118, 56, 0, 0, 56, 241, 173, 190, 247, 54, 38, 62, 198, 161, 137, 63, 130, 13, 244, 57, 0, 57, 0, 60, 210, 240, 137, 190, 127, 55, 110, 62, 46, 38, 4, 63, 130, 13, 242, 63, 118, 56, 0, 60, 242, 2, 174, 190, 219, 117, 87, 63, 59, 161, 137, 63, 130, 13, 243, 62, 0, 57, 0, 58, 210, 240, 137, 190, 194, 126, 69, 63, 46, 38, 4, 63, 130, 13, 244, 69, 118, 56, 0, 58, 234, 156, 79, 62, 128, 15, 1, 63, 12, 92, 167, 190, 127, 127, 127, 64, 0, 54, 0, 56, 34, 96, 80, 190, 118, 249, 0, 63, 232, 58, 167, 190, 127, 127, 127, 64, 0, 48, 0, 56, 11, 40, 71, 62, 124, 235, 75, 62, 52, 71, 162, 190, 127, 127, 127, 64, 0, 54, 0, 52, 53, 234, 71, 190, 142, 69, 76, 62, 249, 62, 162, 190, 127, 127, 127, 64, 0, 48, 0, 52, 130, 189, 173, 62, 9, 101, 87, 63, 241, 22, 137, 63, 126, 13, 12, 69, 0, 57, 0, 56, 210, 240, 137, 62, 194, 126, 69, 63, 46, 38, 4, 63, 126, 13, 14, 63, 118, 56, 0, 56, 130, 189, 173, 62, 99, 158, 38, 62, 241, 22, 137, 63, 126, 13, 14, 64, 0, 57, 0, 52, 210, 240, 137, 62, 127, 55, 110, 62, 46, 38, 4, 63, 126, 13, 12, 57, 118, 56, 0, 52, 242, 2, 174, 190, 219, 117, 87, 63, 59, 161, 137, 63, 13, 126, 244, 69, 0, 57, 0, 58, 210, 240, 137, 190, 194, 126, 69, 63, 46, 38, 4, 63, 13, 126, 0, 70, 118, 56, 0, 58, 130, 189, 173, 62, 9, 101, 87, 63, 241, 22, 137, 63, 13, 126, 255, 70, 0, 57, 0, 56, 210, 240, 137, 62, 194, 126, 69, 63, 46, 38, 4, 63, 13, 126, 12, 69, 118, 56, 0, 56, 9, 118, 158, 190, 119, 48, 78, 63, 198, 190, 174, 189, 70, 127, 236, 93, 199, 54, 0, 58, 34, 96, 80, 190, 118, 249, 0, 63, 232, 58, 167, 190, 70, 127, 250, 96, 0, 54, 0, 58, 140, 109, 158, 62, 191, 70, 78, 63, 3, 18, 174, 189, 70, 127, 0, 98, 199, 54, 0, 56, 234, 156, 79, 62, 128, 15, 1, 63, 12, 92, 167, 190, 70, 127, 20, 93, 0, 54, 0, 56, 140, 109, 158, 62, 191, 70, 78, 63, 3, 18, 174, 189, 125, 219, 20, 93, 199, 54, 0, 56, 234, 156, 79, 62, 128, 15, 1, 63, 12, 92, 167, 190, 125, 219, 24, 85, 0, 54, 0, 56, 87, 107, 157, 62, 49, 248, 70, 62, 97, 6, 147, 189, 125, 219, 28, 78, 199, 54, 0, 52, 11, 40, 71, 62, 124, 235, 75, 62, 52, 71, 162, 190, 125, 219, 36, 63, 0, 54, 0, 52, 75, 119, 157, 190, 22, 49, 71, 62, 132, 195, 147, 189, 131, 219, 220, 63, 199, 54, 0, 60, 53, 234, 71, 190, 142, 69, 76, 62, 249, 62, 162, 190, 131, 219, 224, 72, 0, 54, 0, 60, 9, 118, 158, 190, 119, 48, 78, 63, 198, 190, 174, 189, 131, 219, 227, 77, 199, 54, 0, 58, 34, 96, 80, 190, 118, 249, 0, 63, 232, 58, 167, 190, 131, 219, 236, 93, 0, 54, 0, 58, 87, 107, 157, 62, 49, 248, 70, 62, 97, 6, 147, 189, 0, 129, 37, 63, 199, 54, 0, 52, 11, 40, 71, 62, 124, 235, 75, 62, 52, 71, 162, 190, 0, 129, 24, 63, 0, 54, 0, 52, 75, 119, 157, 190, 22, 49, 71, 62, 132, 195, 147, 189, 0, 129, 246, 63, 199, 54, 0, 0, 53, 234, 71, 190, 142, 69, 76, 62, 249, 62, 162, 190, 0, 129, 219, 63, 0, 54, 0, 0, 207, 236, 240, 190, 69, 206, 250, 62, 117, 30, 105, 62, 168, 220, 127, 64, 0, 0, 0, 60, 207, 236, 240, 190, 69, 206, 250, 62, 231, 84, 25, 63, 168, 220, 127, 64, 0, 0, 0, 60, 27, 117, 173, 190, 216, 217, 47, 62, 114, 30, 105, 62, 168, 220, 127, 64, 0, 0, 0, 60, 27, 117, 173, 190, 216, 217, 47, 62, 232, 84, 25, 63, 168, 220, 127, 64, 0, 0, 0, 60, 27, 117, 173, 62, 216, 217, 47, 62, 114, 30, 105, 62, 88, 220, 127, 64, 0, 0, 0, 60, 27, 117, 173, 62, 216, 217, 47, 62, 232, 84, 25, 63, 88, 220, 127, 64, 0, 0, 0, 60, 207, 236, 240, 62, 69, 206, 250, 62, 117, 30, 105, 62, 88, 220, 127, 64, 0, 0, 0, 60, 207, 236, 240, 62, 69, 206, 250, 62, 231, 84, 25, 63, 88, 220, 127, 64, 0, 0, 0, 60, 238, 66, 167, 62, 124, 82, 86, 63, 115, 30, 105, 62, 36, 88, 127, 64, 0, 0, 0, 60, 238, 66, 167, 62, 124, 82, 86, 63, 231, 84, 25, 63, 36, 88, 127, 64, 0, 0, 0, 60, 235, 50, 12, 60, 69, 14, 120, 63, 115, 30, 105, 62, 36, 88, 127, 64, 0, 0, 0, 60, 235, 50, 12, 60, 69, 14, 120, 63, 231, 84, 25, 63, 36, 88, 127, 64, 0, 0, 0, 60, 26, 117, 173, 190, 103, 57, 83, 63, 115, 30, 105, 62, 168, 36, 127, 64, 0, 0, 0, 60, 26, 117, 173, 190, 103, 57, 83, 63, 231, 84, 25, 63, 168, 36, 127, 64, 0, 0, 0, 60, 207, 236, 240, 190, 69, 206, 250, 62, 117, 30, 105, 62, 168, 36, 127, 64, 0, 0, 0, 60, 207, 236, 240, 190, 69, 206, 250, 62, 231, 84, 25, 63, 168, 36, 127, 64, 0, 0, 0, 60, 27, 117, 173, 190, 216, 217, 47, 62, 114, 30, 105, 62, 220, 168, 127, 64, 0, 0, 0, 60, 27, 117, 173, 190, 216, 217, 47, 62, 232, 84, 25, 63, 220, 168, 127, 64, 0, 0, 0, 60, 235, 50, 12, 188, 194, 48, 228, 60, 117, 30, 105, 62, 220, 168, 127, 64, 0, 0, 0, 60, 235, 50, 12, 188, 192, 48, 228, 60, 231, 84, 25, 63, 220, 168, 127, 64, 0, 0, 0, 60, 235, 50, 12, 188, 194, 48, 228, 60, 117, 30, 105, 62, 36, 168, 127, 64, 0, 0, 0, 60, 235, 50, 12, 188, 192, 48, 228, 60, 231, 84, 25, 63, 36, 168, 127, 64, 0, 0, 0, 60, 27, 117, 173, 62, 216, 217, 47, 62, 114, 30, 105, 62, 36, 168, 127, 64, 0, 0, 0, 60, 27, 117, 173, 62, 216, 217, 47, 62, 232, 84, 25, 63, 36, 168, 127, 64, 0, 0, 0, 60, 207, 236, 240, 62, 69, 206, 250, 62, 117, 30, 105, 62, 88, 36, 127, 64, 0, 0, 0, 60, 207, 236, 240, 62, 69, 206, 250, 62, 231, 84, 25, 63, 88, 36, 127, 64, 0, 0, 0, 60, 238, 66, 167, 62, 124, 82, 86, 63, 115, 30, 105, 62, 88, 36, 127, 64, 0, 0, 0, 60, 238, 66, 167, 62, 124, 82, 86, 63, 231, 84, 25, 63, 88, 36, 127, 64, 0, 0, 0, 60, 235, 50, 12, 60, 69, 14, 120, 63, 115, 30, 105, 62, 220, 88, 127, 64, 0, 0, 0, 60, 235, 50, 12, 60, 69, 14, 120, 63, 231, 84, 25, 63, 220, 88, 127, 64, 0, 0, 0, 60, 26, 117, 173, 190, 103, 57, 83, 63, 115, 30, 105, 62, 220, 88, 127, 64, 0, 0, 0, 60, 26, 117, 173, 190, 103, 57, 83, 63, 231, 84, 25, 63, 220, 88, 127, 64, 0, 0, 0, 60, 207, 236, 240, 190, 69, 206, 250, 62, 117, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 27, 117, 173, 190, 216, 217, 47, 62, 114, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 0, 0, 0, 0, 220, 47, 255, 62, 249, 76, 86, 62, 127, 127, 127, 64, 0, 0, 0, 60, 207, 236, 240, 190, 69, 206, 250, 62, 231, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 26, 117, 173, 190, 103, 57, 83, 63, 231, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 0, 0, 0, 0, 220, 47, 255, 62, 70, 9, 30, 63, 0, 0, 127, 192, 0, 0, 0, 60, 26, 117, 173, 190, 103, 57, 83, 63, 115, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 235, 50, 12, 60, 69, 14, 120, 63, 231, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 235, 50, 12, 60, 69, 14, 120, 63, 115, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 238, 66, 167, 62, 124, 82, 86, 63, 231, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 238, 66, 167, 62, 124, 82, 86, 63, 115, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 207, 236, 240, 62, 69, 206, 250, 62, 231, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 207, 236, 240, 62, 69, 206, 250, 62, 117, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 27, 117, 173, 62, 216, 217, 47, 62, 232, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 27, 117, 173, 62, 216, 217, 47, 62, 114, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 235, 50, 12, 188, 192, 48, 228, 60, 231, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 27, 117, 173, 190, 216, 217, 47, 62, 232, 84, 25, 63, 0, 0, 127, 192, 0, 0, 0, 60, 235, 50, 12, 188, 194, 48, 228, 60, 117, 30, 105, 62, 127, 127, 127, 64, 0, 0, 0, 60, 130, 247, 137, 190, 234, 129, 69, 63, 143, 178, 139, 62, 0, 113, 13, 57, 218, 55, 0, 58, 9, 118, 158, 190, 119, 48, 78, 63, 198, 190, 174, 189, 0, 113, 3, 56, 199, 54, 0, 58, 88, 239, 137, 62, 5, 126, 69, 63, 25, 244, 139, 62, 0, 113, 252, 57, 218, 55, 0, 56, 140, 109, 158, 62, 191, 70, 78, 63, 3, 18, 174, 189, 0, 113, 243, 57, 199, 54, 0, 56, 210, 240, 137, 190, 194, 126, 69, 63, 46, 38, 4, 63, 0, 127, 0, 63, 118, 56, 0, 58, 130, 247, 137, 190, 234, 129, 69, 63, 143, 178, 139, 62, 0, 127, 0, 63, 218, 55, 0, 58, 210, 240, 137, 62, 194, 126, 69, 63, 46, 38, 4, 63, 0, 127, 0, 63, 118, 56, 0, 56, 88, 239, 137, 62, 5, 126, 69, 63, 25, 244, 139, 62, 0, 127, 0, 63, 218, 55, 0, 56, 88, 239, 137, 62, 5, 126, 69, 63, 25, 244, 139, 62, 111, 0, 243, 57, 218, 55, 0, 56, 140, 109, 158, 62, 191, 70, 78, 63, 3, 18, 174, 189, 111, 0, 243, 62, 199, 54, 0, 56, 49, 239, 137, 62, 193, 58, 110, 62, 83, 245, 139, 62, 111, 0, 244, 65, 218, 55, 0, 52, 87, 107, 157, 62, 49, 248, 70, 62, 97, 6, 147, 189, 111, 0, 244, 69, 199, 54, 0, 52, 210, 240, 137, 62, 194, 126, 69, 63, 46, 38, 4, 63, 127, 0, 0, 63, 118, 56, 0, 56, 88, 239, 137, 62, 5, 126, 69, 63, 25, 244, 139, 62, 127, 0, 0, 63, 218, 55, 0, 56, 210, 240, 137, 62, 127, 55, 110, 62, 46, 38, 4, 63, 127, 0, 0, 63, 118, 56, 0, 52, 49, 239, 137, 62, 193, 58, 110, 62, 83, 245, 139, 62, 127, 0, 0, 63, 218, 55, 0, 52, 231, 247, 137, 190, 84, 41, 110, 62, 156, 173, 139, 62, 145, 0, 12, 69, 218, 55, 0, 60, 75, 119, 157, 190, 22, 49, 71, 62, 132, 195, 147, 189, 145, 0, 14, 64, 199, 54, 0, 60, 130, 247, 137, 190, 234, 129, 69, 63, 143, 178, 139, 62, 145, 0, 13, 61, 218, 55, 0, 58, 9, 118, 158, 190, 119, 48, 78, 63, 198, 190, 174, 189, 145, 0, 13, 57, 199, 54, 0, 58, 210, 240, 137, 190, 127, 55, 110, 62, 46, 38, 4, 63, 129, 0, 0, 63, 118, 56, 0, 60, 231, 247, 137, 190, 84, 41, 110, 62, 156, 173, 139, 62, 129, 0, 0, 63, 218, 55, 0, 60, 210, 240, 137, 190, 194, 126, 69, 63, 46, 38, 4, 63, 129, 0, 0, 63, 118, 56, 0, 58, 130, 247, 137, 190, 234, 129, 69, 63, 143, 178, 139, 62, 129, 0, 0, 63, 218, 55, 0, 58, 49, 239, 137, 62, 193, 58, 110, 62, 83, 245, 139, 62, 0, 143, 244, 69, 218, 55, 0, 52, 87, 107, 157, 62, 49, 248, 70, 62, 97, 6, 147, 189, 0, 143, 254, 70, 199, 54, 0, 52, 231, 247, 137, 190, 84, 41, 110, 62, 156, 173, 139, 62, 0, 143, 3, 70, 218, 55, 0, 0, 75, 119, 157, 190, 22, 49, 71, 62, 132, 195, 147, 189, 0, 143, 12, 69, 199, 54, 0, 0, 210, 240, 137, 62, 127, 55, 110, 62, 46, 38, 4, 63, 0, 129, 0, 63, 118, 56, 0, 52, 49, 239, 137, 62, 193, 58, 110, 62, 83, 245, 139, 62, 0, 129, 0, 63, 218, 55, 0, 52, 210, 240, 137, 190, 127, 55, 110, 62, 46, 38, 4, 63, 0, 129, 0, 63, 118, 56, 0, 0, 231, 247, 137, 190, 84, 41, 110, 62, 156, 173, 139, 62, 0, 129, 0, 63, 218, 55, 0, 0, 218, 176, 170, 190, 182, 222, 85, 63, 52, 246, 170, 63, 0, 0, 129, 64, 0, 59, 0, 56, 218, 176, 170, 62, 182, 222, 85, 63, 52, 246, 170, 63, 0, 0, 129, 64, 0, 57, 0, 56, 218, 176, 170, 190, 178, 183, 44, 62, 52, 246, 170, 63, 0, 0, 129, 64, 0, 59, 0, 52, 218, 176, 170, 62, 178, 183, 44, 62, 52, 246, 170, 63, 0, 0, 129, 64, 0, 57, 0, 52, 130, 189, 173, 62, 9, 101, 87, 63, 241, 22, 137, 63, 127, 0, 127, 64, 0, 57, 0, 56, 130, 189, 173, 62, 99, 158, 38, 62, 241, 22, 137, 63, 127, 0, 127, 64, 0, 57, 0, 52, 218, 176, 170, 62, 182, 222, 85, 63, 52, 246, 170, 63, 127, 0, 127, 64, 0, 57, 0, 56, 218, 176, 170, 62, 178, 183, 44, 62, 52, 246, 170, 63, 127, 0, 127, 64, 0, 57, 0, 52, 242, 2, 174, 190, 219, 117, 87, 63, 59, 161, 137, 63, 0, 127, 127, 64, 0, 57, 0, 58, 130, 189, 173, 62, 9, 101, 87, 63, 241, 22, 137, 63, 0, 127, 127, 64, 0, 57, 0, 56, 218, 176, 170, 190, 182, 222, 85, 63, 52, 246, 170, 63, 0, 127, 127, 64, 0, 57, 0, 58, 218, 176, 170, 62, 182, 222, 85, 63, 52, 246, 170, 63, 0, 127, 127, 64, 0, 57, 0, 56, 130, 189, 173, 62, 99, 158, 38, 62, 241, 22, 137, 63, 0, 129, 127, 64, 0, 57, 0, 52, 56, 241, 173, 190, 247, 54, 38, 62, 198, 161, 137, 63, 0, 129, 127, 64, 0, 57, 0, 0, 218, 176, 170, 62, 178, 183, 44, 62, 52, 246, 170, 63, 0, 129, 127, 64, 0, 57, 0, 52, 218, 176, 170, 190, 178, 183, 44, 62, 52, 246, 170, 63, 0, 129, 127, 64, 0, 57, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 8, 0, 10, 0, 9, 0, 10, 0, 11, 0, 9, 0, 12, 0, 14, 0, 13, 0, 14, 0, 15, 0, 13, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 20, 0, 22, 0, 21, 0, 22, 0, 23, 0, 21, 0, 24, 0, 26, 0, 25, 0, 26, 0, 27, 0, 25, 0, 28, 0, 30, 0, 29, 0, 30, 0, 31, 0, 29, 0, 32, 0, 34, 0, 33, 0, 34, 0, 35, 0, 33, 0, 36, 0, 38, 0, 37, 0, 38, 0, 39, 0, 37, 0, 40, 0, 42, 0, 41, 0, 42, 0, 43, 0, 41, 0, 44, 0, 46, 0, 45, 0, 46, 0, 47, 0, 45, 0, 48, 0, 50, 0, 49, 0, 50, 0, 51, 0, 49, 0, 52, 0, 54, 0, 53, 0, 54, 0, 55, 0, 53, 0, 56, 0, 58, 0, 57, 0, 58, 0, 59, 0, 57, 0, 60, 0, 62, 0, 61, 0, 62, 0, 63, 0, 61, 0, 64, 0, 66, 0, 65, 0, 66, 0, 67, 0, 65, 0, 68, 0, 70, 0, 69, 0, 70, 0, 71, 0, 69, 0, 72, 0, 74, 0, 73, 0, 74, 0, 75, 0, 73, 0, 76, 0, 78, 0, 77, 0, 78, 0, 79, 0, 77, 0, 80, 0, 82, 0, 81, 0, 82, 0, 83, 0, 81, 0, 84, 0, 86, 0, 85, 0, 86, 0, 87, 0, 85, 0, 88, 0, 90, 0, 89, 0, 90, 0, 91, 0, 89, 0, 92, 0, 94, 0, 93, 0, 94, 0, 95, 0, 93, 0, 96, 0, 98, 0, 97, 0, 99, 0, 101, 0, 100, 0, 102, 0, 98, 0, 96, 0, 100, 0, 101, 0, 103, 0, 104, 0, 98, 0, 102, 0, 103, 0, 101, 0, 105, 0, 106, 0, 98, 0, 104, 0, 105, 0, 101, 0, 107, 0, 108, 0, 98, 0, 106, 0, 107, 0, 101, 0, 109, 0, 110, 0, 98, 0, 108, 0, 109, 0, 101, 0, 111, 0, 111, 0, 101, 0, 112, 0, 113, 0, 98, 0, 110, 0, 97, 0, 98, 0, 113, 0, 112, 0, 101, 0, 99, 0, 114, 0, 116, 0, 115, 0, 116, 0, 117, 0, 115, 0, 118, 0, 120, 0, 119, 0, 120, 0, 121, 0, 119, 0, 122, 0, 124, 0, 123, 0, 124, 0, 125, 0, 123, 0, 126, 0, 128, 0, 127, 0, 128, 0, 129, 0, 127, 0, 130, 0, 132, 0, 131, 0, 132, 0, 133, 0, 131, 0, 134, 0, 136, 0, 135, 0, 136, 0, 137, 0, 135, 0, 138, 0, 140, 0, 139, 0, 140, 0, 141, 0, 139, 0, 142, 0, 144, 0, 143, 0, 144, 0, 145, 0, 143, 0, 146, 0, 148, 0, 147, 0, 148, 0, 149, 0, 147, 0, 150, 0, 152, 0, 151, 0, 152, 0, 153, 0, 151, 0, 154, 0, 156, 0, 155, 0, 156, 0, 157, 0, 155, 0, 158, 0, 160, 0, 159, 0, 160, 0, 161, 0, 159, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 264,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 162
}

[sub_resource type="CapsuleShape" id=2]
radius = 0.251142
height = 1.05923

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )
mouse_sentetive = 0.7
smooth_mouse = true
smooth_speed = 0.5
can_dash = true

[node name="collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="jump_ray" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.839222, 0 )
enabled = true
cast_to = Vector3( 0, -0.136, 0 )

[node name="camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.477777, 0 )
current = true

[node name="fire_ray" type="RayCast" parent="camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.821048 )
enabled = true
cast_to = Vector3( 0, 0, -50 )
collision_mask = 2
collide_with_areas = true

[node name="weapons" type="Spatial" parent="camera"]

[node name="Revolver" type="Spatial" parent="camera/weapons"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.617, -0.444, -0.683 )
script = ExtResource( 2 )
base_res = ExtResource( 3 )
str_screen_shake = 0.06

[node name="anim" type="AnimationPlayer" parent="camera/weapons/Revolver"]
anims/RESET = SubResource( 3 )
anims/shoot = SubResource( 4 )

[node name="mesh_handler" type="Spatial" parent="camera/weapons/Revolver"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.115, -0.093, -0.198 )

[node name="Revolver" type="MeshInstance" parent="camera/weapons/Revolver/mesh_handler"]
transform = Transform( -0.407, 0, -6.14553e-08, 0, 0.407, 0, 6.14553e-08, 0, -0.407, 0, 0, -5.96046e-08 )
mesh = ExtResource( 5 )
skeleton = NodePath("../../../../..")
material/0 = ExtResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="camera/weapons/Revolver/mesh_handler/Revolver"]
mesh = SubResource( 5 )
material/0 = ExtResource( 7 )

[node name="shot_sound" type="AudioStreamPlayer3D" parent="camera/weapons/Revolver"]
stream = ExtResource( 9 )
unit_size = 14.9
max_db = -0.613
pitch_scale = 1.28
panning_strength = 0.0
bus = "Sounds"

[node name="Riffle" parent="camera/weapons" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.532, -0.533, -0.683 )
visible = false
str_screen_shake = 0.02

[node name="Sniperka" parent="camera/weapons" instance=ExtResource( 11 )]
visible = false
str_screen_shake = 0.4

[node name="player_area" type="Area" parent="."]

[node name="collision" type="CollisionShape" parent="player_area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="dash_reload" type="Timer" parent="."]
one_shot = true

[node name="dash_duration" type="Timer" parent="."]
one_shot = true

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -80.0
pitch_scale = 1.19
autoplay = true
bus = "Sounds"

[node name="dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Sounds"

[node name="get_ammo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 10.042
bus = "Sounds"

[connection signal="area_entered" from="player_area" to="." method="_area_enter"]
